--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "archiver": "^7.0.1",
     "fs-extra": "^11.3.0",
     "mammoth": "^1.9.0",
+    "pizzip": "^3.1.8",
     "xml2js": "^0.6.2"
   }
 }
